[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/BaseObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Bullet.gd" type="Script" id=2]
[ext_resource path="res://sprites/base_bullet.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 2.2585

[node name="Bullet" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]
frames = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="LifeTimer" type="Timer" parent="." index="4"]
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
